[package]

name = "claymore"
version = "0.1.0"
authors = [
"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[[bin]]
name = "claymore"
path = "src/main.rs"

[dependencies]
env_logger = "*"

[dependencies.claymore-scene]
path = "src/scene/"

[dependencies.claymore-load]
path = "src/load/"

[dependencies.claymore-game]
path = "src/game/"

[dependencies.glutin]
git = "https://github.com/tomaka/glutin"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_device_gl]
git = "https://github.com/gfx-rs/gfx_device_gl"
