[package]

name = "claymore"
version = "0.1.5"
authors = [
"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[[bin]]
name = "claymore"
path = "src/main.rs"

# Dependencies

[dependencies]
env_logger = "*"

[dependencies.claymore-scene]
path = "src/scene/"

[dependencies.claymore-load]
path = "src/load/"

[dependencies.claymore-game]
path = "src/game/"

#[dependencies.fibe]
#git = "https://github.com/kvark/fibe-rs"

[dependencies.glutin]
git = "https://github.com/tomaka/glutin"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_window_glutin]
git = "https://github.com/gfx-rs/gfx_window_glutin"

# Examples

[[example]]
name = "viewer"
path = "examples/viewer/bin.rs"

[[example]]
name = "forest"
path = "examples/forest/bin.rs"

[dev_dependencies]
clock_ticks = "*"
log = "*"
rand = "*"
rustc-serialize = "*"

[dev_dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dev_dependencies.gfx_phase]
git = "https://github.com/kvark/gfx_scene"

[dev_dependencies.gfx_pipeline]
git = "https://github.com/kvark/gfx_pipeline"

[dev_dependencies.gfx_debug_draw]
git = "https://github.com/PistonDevelopers/gfx-debug-draw"
