[package]
name = "claymore-game"
version = "0.0.1"
authors = [
"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[lib]
name = "claymore_game"
path = "lib.rs"

[dependencies]
log = "*"
rustc-serialize = "*"

[dependencies.claymore-scene]
path = "../scene"

[dependencies.claymore-load]
path = "../load"

[dependencies.grid]
git = "https://github.com/kvark/grid-rs"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx_macros"

[dependencies.gfx_scene]
git = "https://github.com/kvark/gfx_scene"

[dependencies.gfx_pipeline]
git = "https://github.com/kvark/gfx_pipeline"
