[package]
name = "claymore-game"
version = "0.0.2"
authors = [
"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[lib]
name = "claymore_game"
path = "lib.rs"

[dependencies]
log = "*"
rustc-serialize = "*"
cgmath = "*"
gfx = "0.6"
gfx_pipeline = "0.2"

[dependencies.claymore-scene]
path = "../scene"

[dependencies.claymore-load]
path = "../load"

[dependencies.grid]
git = "https://github.com/kvark/grid-rs"
