[package]
name = "claymore-load"
version = "0.0.1"
authors = [
"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[lib]
name = "claymore-load"
path = "lib.rs"

[dependencies.claymore-scene]
path = "../scene"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx_macros"
plugin = true

[dependencies.piston-gfx_texture]
git = "https://github.com/PistonDevelopers/gfx_texture"

[dependencies.gfx_scene]
git = "https://github.com/kvark/gfx_scene"

[dependencies]
log = "*"
rustc-serialize = "*"
