[package]
name = "claymore-load"
version = "0.1.1"
authors = [
"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[lib]
name = "claymore_load"
path = "lib.rs"

[dependencies]
log = "*"
rustc-serialize = "*"
cgmath = "*"
gfx = "0.6"
gfx_scene = "0.2"

[dependencies.piston-gfx_texture]
gfx_texture = "0.1"

[dependencies.claymore-scene]
path = "../scene"
