[package]
name = "claymore-scene"
version = "0.0.1"
authors = [
"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[lib]
name = "claymore_scene"
path = "lib.rs"

[dependencies.id]
git = "https://github.com/kvark/simplecs"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.gfx]
git = "https://github.com/gfx-rs/gfx-rs"

[dependencies.gfx_macros]
git = "https://github.com/gfx-rs/gfx_macros"
plugin = true

[dependencies.gfx_phase]
git = "https://github.com/kvark/gfx_scene"

[dependencies.gfx_scene]
git = "https://github.com/kvark/gfx_scene"

[dependencies.gfx_pipeline]
git = "https://github.com/kvark/gfx_pipeline"

[dependencies]
log = "*"
