[package]
name = "claymore-scene"
version = "0.1.0"
authors = [
"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[lib]
name = "claymore_scene"
path = "lib.rs"

[dependencies.id]
git = "https://github.com/kvark/simplecs"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.gfx_scene]
git = "https://github.com/kvark/gfx_scene"

[dependencies.gfx_pipeline]
git = "https://github.com/kvark/gfx_pipeline"

[dependencies]
log = "*"
