[package]
name = "claymore-scene"
version = "0.1.1"
authors = [
"Dzmitry Malyshau <kvarkus@gmail.com>",
]

[lib]
name = "claymore_scene"
path = "lib.rs"

[dependencies]
log = "*"
cgmath = "*"
gfx = "0.6"
gfx_scene = "0.3"
gfx_pipeline = "0.2"

[dependencies.id]
git = "https://github.com/kvark/simplecs"
